tests/fixtures/invalid/dict_mul_none.py
# Cannot multiply Dict[str, int] and None
x: dict[str, int] = {"a": 1} * None
